Wrong rotation input values when using shortcuts on keyboard like rx720 #67067

Closed
opened 2019-07-16 17:23:51 +02:00 by Johannes Wuensch · 11 comments

System Information
Operating system: Windows 10
Graphics card: GTX 1080 Ti

Blender Version
Broken: 2.80 Release Candidate 1

Short description of error
Rotation values inputted after hitting "r" and then hitting an axis value like "x" are wrong.

If I select an Object and hit "r" then "x" then "720" then "return", the X-rotation will be set to 0.00002d
Or if i enter rx359 the x-rotation will be set to -1.

If I input them in the n-panel it works fine, if I input them in the properties panel it works fine, too. And if I use the widget to rotate the cube two times in that axis and let go it's also 720 degrees. The wrong values appear just when inputting them the way described above.
I think this should be consistent all over the place and it really makes no sense that it rotates my cube -1 on the x-axis when i clearly wanted it to rotate 359 degrees in the other direction on that axis...

Exact steps for others to reproduce the error
Select an Object and hit "r" then "x" then "720" then "return", the X-rotatioin will be set to 0.00002d
Or enter rx359 the x-rotation will be set to -1.

**System Information** Operating system: Windows 10 Graphics card: GTX 1080 Ti **Blender Version** Broken: 2.80 Release Candidate 1 **Short description of error** Rotation values inputted after hitting "r" and then hitting an axis value like "x" are wrong. If I select an Object and hit "r" then "x" then "720" then "return", the X-rotation will be set to 0.00002d Or if i enter rx359 the x-rotation will be set to -1. If I input them in the n-panel it works fine, if I input them in the properties panel it works fine, too. And if I use the widget to rotate the cube two times in that axis and let go it's also 720 degrees. The wrong values appear just when inputting them the way described above. I think this should be consistent all over the place and it really makes no sense that it rotates my cube -1 on the x-axis when i clearly wanted it to rotate 359 degrees in the other direction on that axis... **Exact steps for others to reproduce the error** Select an Object and hit "r" then "x" then "720" then "return", the X-rotatioin will be set to 0.00002d Or enter rx359 the x-rotation will be set to -1.

Added subscriber: @JohannesWunsch

Added subscriber: @JohannesWunsch

Added subscribers: @WilliamReynish, @brecht, @ZedDB

Added subscribers: @WilliamReynish, @brecht, @ZedDB

@WilliamReynish @brecht Thoughts on this matter?

@WilliamReynish @brecht Thoughts on this matter?

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Brecht Van Lommel self-assigned this 2019-07-17 16:21:39 +02:00

This would be good to improve but it's not considered a bug currently.

The rotation value entered here goes through various transforms and representations which can't preserve the difference between 0 and 360. We could add a special code path for the simple case where the entered value equals the Euler value on the object, but that's outside the scope of this tracker.

This would be good to improve but it's not considered a bug currently. The rotation value entered here goes through various transforms and representations which can't preserve the difference between 0 and 360. We could add a special code path for the simple case where the entered value equals the Euler value on the object, but that's outside the scope of this tracker.

Added subscriber: @mont29

Added subscriber: @mont29
Brecht Van Lommel was unassigned by Bastien Montagne 2019-07-17 16:24:54 +02:00
Bastien Montagne self-assigned this 2019-07-17 16:24:54 +02:00

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Hmmm… this is actually a sequel of #48998, looks like I fixed clamping of the drawn value then, but not the actual application of said value.

Applying rotation goes through matrix, which simply does not support rotation outside of the ]-180, 180] range. Thing is, with other transform tools, value gets applied often, so steps between applications are always below 360°. With num input, it gets applied in a single step, where the clamping gets visible.

Trying to find a fix currently (which is proving to be much, much more difficult than anticipated :( ), but would not recommend adding it to 2.80 release in any case, this can have unexpected side effects, and reported behavior have been there since the dark ages of Blender…

Hmmm… this is actually a sequel of #48998, looks like I fixed clamping of the drawn value then, but not the actual application of said value. Applying rotation goes through matrix, which simply does not support rotation outside of the ]-180, 180] range. Thing is, with other transform tools, value gets applied often, so steps between applications are always below 360°. With num input, it gets applied in a single step, where the clamping gets visible. Trying to find a fix currently (which is proving to be much, much more difficult than anticipated :( ), but would not recommend adding it to 2.80 release in any case, this can have unexpected side effects, and reported behavior have been there since the dark ages of Blender…

eeeh… was triaged in-between…

@brecht imho this is really a bug, and a rather annoying one, though nothing like a regression… This has to be fixed somehow, that’s a nasty usability flow making numinput essentially useless for rotations currently.

eeeh… was triaged in-between… @brecht imho this is really a bug, and a rather annoying one, though nothing like a regression… This has to be fixed somehow, that’s a nasty usability flow making numinput essentially useless for rotations currently.

This issue was referenced by cee484a4c5

This issue was referenced by cee484a4c51a3d207e42b2d0486846da6db386cf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67067
No description provided.